# todo-app-frontend

./: pyproject.toml  requirements.txt
backend/: .env  main.py
backend/alembic/: env.py
backend/alembic/versions/: 753aa79a425d_first_migration.py
backend/api/: dependencies.py
backend/api/routers/: categories.py  task.py
backend/core/: config.py
backend/db/: session.py
backend/models/: base.py  category.py  task.py
backend/repositories/: categories.py  task.py
backend/schemas/: category.py  task.py
backend/services/: category.py  exceptions.py  task.py
